--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,108 +1,86 @@
 packages:
   - "packages/*"
 
-catalog: 
+catalog:
+  # =======================================================================
+  # >> Common/Workspace Dependencies
+  # =======================================================================
+  # Core & Tooling
+  "@types/node": "20.2.5"
+  "tslib": "^2.8.1"
+  "typescript": "~5.7.2"
+  "turbo": "^2.3.3"
+  "husky": "^9.1.6"
+
+  # Shared Build Tools
+  "rollup": "~4.29.1"
+  "@rollup/plugin-typescript": "~12.1.2"
+
+  # =======================================================================
+  # >> Commit & Changelog
+  # =======================================================================
   "czg": ^1.10.1
   "cz-git": ^1.10.1
-  "sass-migrator": "^2.2.1"
-  "@types/node": "20.2.5"
-  "@vitest/coverage-v8": "^2.1.8"
-  "@vitest/ui": "^2.1.8"
-  "lint-staged": "^15.2.10"
-  "husky": "^9.1.6"
-  "jsdom": "^25.0.1"
-  "tslib": "^2.8.1"
-  "turbo": "^2.3.3"
-  "typescript": "~5.7.2"
-  "vite": "^6.0.5"
-  "vitest": "^2.1.0"
   "@changesets/cli": "~2.27.7"
   "@commitlint/cli": "^19.5.0"
   "@commitlint/config-conventional": "^19.5.0"
   "commitlint-plugin-function-rules": "^4.0.1"
+  "@quantum-design-configs/commitlint": "^1.0.2"
+
+  # =======================================================================
+  # >> Linting & Formatting
+  # =======================================================================
+  "lint-staged": "^15.2.10"
   "@typescript-eslint/eslint-plugin": "~8.18.2"
   "@typescript-eslint/parser": "~8.18.2"
   "eslint-config-turbo": "~2.3.3"
   "eslint-plugin-vue": "~9.32.0"
   "eslint": "~8.57.0"
-  "rollup": "~4.29.1"
-  "@rollup/plugin-terser": "~0.4.4"
-  "@rollup/plugin-typescript": "~12.1.2"
+  "@quantum-design-configs/eslint": "^2.0.0"
+
+  # =======================================================================
+  # >> mini-vue Dependencies
+  # =======================================================================
   "@rollup/plugin-commonjs": "~28.0.2"
-  "@rollup/plugin-json": "~6.1.0"
   "@rollup/plugin-node-resolve": "~16.0.0"
-  "@vitejs/plugin-vue": "~5.2.1"
-  "@vitejs/plugin-vue-jsx": "~4.1.1"
-  "postcss-pxtorem": "~6.1.0"
-  "unplugin-vue-components": "~0.28.0"
-  "vite-plugin-compression2": "~1.3.3"
-  "vite-plugin-dts": "~4.4.0"
-  "vite-plugin-pwa": "~1.0.0"
-  "vite-plugin-vue-mcp": "latest"
-  "vite-plugin-vue-devtools": "^7.7.2"
-  "@sentry/vue": "~8.47.0"
-  "@sentry/cli": "1.72.0"
-  "@sentry/vite-plugin": "~2.22.0"
-  "@types/postcss-pxtorem": "~6.0.3"
-  "@vue/test-utils": "~2.4.6"
-  "sass": "~1.83.0"
-  "vue": "~3.5.13"
-  "vue-router": "~4.5.0"
-  "vue-types": "~6.0.0"
-  "pinia": "~3.0.0"
-  "sortablejs": "~1.15.0"
-  "@types/sortablejs": "~1.15.0"
-  "echarts": "~5.6.0"
-  "ant-design-vue": "~4.2.6"
-  "@ant-design/icons-vue": "~7.0.1"
-  "highlight.js": "~11.4.0"
-  "vitepress": "1.5.0"
-  "less": "~4.2.1"
-  "crypto-js": "~4.2.0"
-  "@types/crypto-js": "~4.2.0"
+
+  # =======================================================================
+  # >> mini-vite Dependencies
+  # =======================================================================
+  "cac": "^6.7.14"
+  "chokidar": "^3.5.3"
+  "connect": "^3.7.0"
+  "debug": "^4.3.4"
+  "es-module-lexer": "^1.1.0"
+  "esbuild": "^0.15.15"
+  "fs-extra": "~11.2.0"
+  "@types/fs-extra": "~11.0.4" # Belongs to fs-extra
+  "magic-string": "^0.26.7"
+  "picocolors": "^1.0.0"
+  "resolve": "^1.22.1"
+  "sirv": "^2.0.2"
+  "vue": "^3.3.12"
+  "ws": "^8.11.0"
+  "npm-run-all2": "^6.1.1"
+  "rimraf": "^3.0.2"
+  "@types/connect": "^3.4.38"
+  "@types/debug": "^4.1.12"
+  "@types/resolve": "^1.20.6"
+  # =======================================================================
+  # >> Uncategorized / Potentially Unused
+  # =======================================================================
+  "@rollup/plugin-terser": "~0.4.4"
+  "@rollup/plugin-json": "~6.1.0"
   "lodash-es": "~4.17.21"
   "@types/lodash-es": "~4.17.12"
-  "qs": "~6.12.2"
-  "@types/qs": "~6.9.15"
-  "axios": "~1.7.2"
-  "dayjs": "~1.11.7"
-  "csstype": "~3.1.2"
-  "@nuxt/kit": "~3.15.0"
-  "magic-string": "~0.30.0"
-  "unplugin": "~2.1.0"
-  "nuxt": "~3.15.0"
-  "@nuxt/module-builder": "~0.8.4"
-  "@nuxt/schema": "~3.15.0"
-  "monaco-editor": "^0.52.2"
-  "tinymce": "^5.10.9"
-  "nprogress": "0.2.0"
-  "@types/nprogress": "0.2.0"
-  "element-resize-detector": "1.2.4"
-  "@types/element-resize-detector": "1.1.3"
-  "vue-tsc": "1.8.8"
-  "workbox-build": "~7.3.0"
-  "workbox-window": "~7.3.0"
-  "fs-extra": "~11.2.0"
-  "@types/fs-extra": "~11.0.4"
-  "@ant-design-vue/nuxt": "~1.4.6"
   "cross-env": "~7.0.3"
   "esno": "~0.17.0"
-  "@vite-pwa/nuxt": "~0.10.6"
-  "@nuxt/devtools": "~2.0.0"
-  "npm-run-all": "~4.1.5"
-  "@pinia/nuxt": "~0.9.0"
   "openai": "~4.86.1"
-  "@types/minimist": "^1.2.3"
-  "@types/prompts": "^2.4.6"
   "kolorist": "^1.8.0"
   "minimist": "^1.2.5"
   "prompts": "^2.4.2"
   "unbuild": "^2.0.0"
-  "@larksuiteoapi/node-sdk": "^1.45.0"
   "zod": "^3.24.2"
   "@modelcontextprotocol/sdk": "^1.8.0"
-  "shx": "^0.3.4"
   "dotenv": "^16.4.5"
   "express": "^5.0.1"
-  "@quantum-design-configs/commitlint": "^1.0.2"
-  "@quantum-design-configs/eslint": "^2.0.0"
