feat: 更新 mini-vite 包，添加依赖项、优化配置，修复构建脚本，新增 README 和示例文件。

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "packageManager": "pnpm@10.13.1",
     "pnpm": {
         "overrides": {
-            "eslint": "catalog:",
-            "@sentry/cli": "catalog:"
+            "eslint": "catalog:"
         }
     },
     "volta": {
