--- a/packages/mini-vue/package.json
+++ b/packages/mini-vue/package.json
@@ -2,7 +2,7 @@
   "name": "mini-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./packages/vue/dist/vue.js",
   "type": "module",
   "scripts": {
     "build": "rollup -c",
