--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "playground-vite",
+    "name": "playground",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -16,6 +16,7 @@
       "vue": "catalog:"
     },
     "devDependencies": {
-      "mini-vite": "workspace:*"
+      "mini-vite": "workspace:*",
+      "mini-vue": "workspace:*"
     }
   }
