feat: 更新依赖项扫描功能，重命名插件，新增 CSS 插件的属性，更新 Vue 模块支持示例，移除旧的 Vite 图标。

--- a/packages/mini-vue/package.json
+++ b/packages/mini-vue/package.json
@@ -2,7 +2,7 @@
   "name": "mini-vue",
   "version": "1.0.0",
   "description": "",
-  "main": "./packages/vue/dist/vue.js",
+  "main": "./packages/vue/dist/vue-esm.js",
   "type": "module",
   "scripts": {
     "build": "rollup -c",
