--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -66,6 +66,7 @@ catalog:
   "@types/connect": "^3.4.38"
   "@types/debug": "^4.1.12"
   "@types/resolve": "^1.20.6"
+  "@types/ws": "^8.11.0"
   # =======================================================================
   # >> Uncategorized / Potentially Unused
   # =======================================================================
